k8s/ingress-personal-website.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: personal-website-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - msjp.dev
    - fpl.msjp.dev
    secretName: echo-tls
  rules:
  - host: msjp.dev
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: personal-website-service
            port:
              number: 3000
  - host: fpl.msjp.dev
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: api-fpl-net-service
            port:
              number: 5000
